--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,8 @@
 @import 'tailwindcss';
+@import "@fontsource/caveat-brush/400.css";
+@import "@fontsource/montserrat/400.css";
+@import "@fontsource/montserrat/500.css";
+@import "@fontsource/montserrat/700.css";
 
 @plugin 'tailwindcss-animate';
 
@@ -7,9 +11,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+
 @theme {
-    --font-sans:
-        'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', 'Caveat Brush', 'Montserrat';
+
 
     --radius-lg: var(--radius);
     --radius-md: calc(var(--radius) - 2px);
